# FACET_mcp

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHED_SUCCESS.md  PUBLISH_TO_PYPI.md  README.md  __init__.py  demo_server.py  requirements.txt  setup.py
examples/mcp/: __init__.py  client_example.py  demo_server.py  usage_examples.py
facet_mcp/: __init__.py  cli.py  server.py
facet_mcp/config/: __init__.py  settings.py
facet_mcp/core/: __init__.py  facets.py  validator.py
facet_mcp/protocol/: __init__.py  messages.py  transport.py
facet_mcp/tools/: __init__.py  facets.py
npm_package/: .eslintrc.cjs  .eslintrc.js  .gitignore  PUBLISH_TO_NPM.md  README.md  jest.config.cjs  package-lock.json  package.json
npm_package/examples/: client_example.ts
npm_package/src/: cli.ts  index.ts
npm_package/src/__tests__/: lenses.test.ts
npm_package/src/__tests__/cli/: cli.test.ts
npm_package/src/__tests__/integration/: server-client.test.ts  simple-integration.test.ts
npm_package/src/__tests__/protocol/: messages.test.ts
npm_package/src/__tests__/tools/: index.test.ts
npm_package/src/__tests__/utils/: lenses.test.ts  validator.test.ts
npm_package/src/core/: client.ts  server.ts
npm_package/src/protocol/: messages.ts  transport.ts
npm_package/src/tools/: index.ts
npm_package/src/types/: index.ts
npm_package/src/utils/: lenses.ts  validator.ts
release-v1.0.2/: README.md  package.json  pyproject.toml  tsconfig.json
tests/: __init__.py  run_tests.py  test_e2e.py  test_facets_engine.py  test_integration.py  test_server.py  test_validator.py
